@@ -6,7 +6,7 @@ import java.util.LinkedList;
 public class Bear implements Comparable<Bear>{
     public Casing casing;
     public Stuffing stuff;
-    public Embroidery ink; 
+    public Embroidery stitching; 
     public LinkedList<NoiseMaker> noisemakers; // accessory
     public LinkedList<Clothing> clothing; // accessory
     double price;
@@ -21,7 +21,7 @@ public class Bear implements Comparable<Bear>{
         this.stuff = new Stuffing(stuffing.BASE);
         noisemakers = new LinkedList<>();
         clothing = new LinkedList<>();
-        ink = new Embroidery("");
+        stitching = new Embroidery("");
         price = 0;
     }
 
@@ -30,7 +30,7 @@ public class Bear implements Comparable<Bear>{
         this.stuff = new Stuffing(stuff);
         noisemakers = new LinkedList<>();
         clothing = new LinkedList<>();
-        ink = new Embroidery("");
+        stitching = new Embroidery("");
         price = 0;
     }
 
@@ -41,7 +41,8 @@ public class Bear implements Comparable<Bear>{
     public boolean addNoise(NoiseMaker noise) {
         if (this.noisemakers.size() >= 5) {
             return false;
-        } else {
+        } 
+        else{
             for (NoiseMaker noisemaker: noisemakers) {
                 if (noise.spot == noisemaker.spot) {
                     return false;
@@ -54,6 +55,6 @@ public class Bear implements Comparable<Bear>{
 
     @Override
     public int compareTo(Bear bear) {
-        return new Double(this.price).compareTo(bear.price);
+        return Double.valueOf(this.price).compareTo(bear.price);
     }
 }
